--- a/style.css
+++ b/style.css
@@ -6,13 +6,11 @@
 
 h1,p{
 	color: #ffffff;
+	justify-content: center;
 }
 body{
-	margin: 0;
-	padding: 0;
-	height: 100vh;
-	background: rgb(2,0,36);
-	background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(77,32,84,1) 54%, rgba(0,212,255,1) 100%);
+	background: rgb(131,58,180);
+	background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(255,0,0,1) 100%, rgba(252,176,69,1) 100%);
 }
 
 #particles-js
